inson user services - WIP

--- a/src/pages/local/01_dashboard.html
+++ b/src/pages/local/01_dashboard.html
@@ -65,7 +65,7 @@
                 <span id="t1c14"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument1">
                     <span class="t_view"></span>
                 </button>
@@ -271,7 +271,7 @@
                 <span id="t1c84"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument7">
                     <span class="t_view"></span>
                 </button>
@@ -305,7 +305,6 @@
                     <span class="t_view"></span>
                 </button>
             </div>
-
         </div>
     </div>
     <footer>
