local dash updated

--- a/src/pages/instruments/01_cpis_inson_services.html
+++ b/src/pages/instruments/01_cpis_inson_services.html
@@ -39,13 +39,17 @@
         </div>
 
         <div class="px-6 mt-5" id="service_list">
-            <div class="grid grid-cols-4 w-full mt-5 gap-0.5">
+            <div class="grid grid-cols-5 w-full mt-5 gap-0.5">
                 <div class="bg-tableHeader flex items-center text-white px-3 py-1.5 font-medium col-span-2"></div>
                 <div
-                    class="bg-tableHeader flex justify-center items-center text-center text-white  px-3 py-1.5 font-medium">
+                    class="bg-tableHeader flex justify-center items-center text-center text-white  px-3 py-1.5 font-medium col-span-1">
                     <span class="t_number_to_be_filled"></span>
                 </div>
-                <div class="bg-tableHeader flex justify-center items-center text-center text-white  px-3 py-1.5 font-medium"
+                <div
+                    class="bg-tableHeader flex justify-center items-center text-center text-white  px-3 py-1.5 font-medium col-span-1">
+                    <span class="t_number_filled"></span>
+                </div>
+                <div class="bg-tableHeader flex justify-center items-center text-center text-white  px-3 py-1.5 font-medium col-span-1"
                     id="collector_dashboard_th2">
                     <span class="t_actions"></span>
                 </div>
