--- a/src/pages/local/01_dashboard.html
+++ b/src/pages/local/01_dashboard.html
@@ -95,7 +95,7 @@
             </div>
             <div
                 class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument2">
                     <span class="t_view"></span>
                 </button>
@@ -124,7 +124,7 @@
                 <span id="t1c34"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument3">
                     <span class="t_view"></span>
                 </button>
@@ -154,7 +154,7 @@
             </div>
             <div
                 class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument4">
                     <span class="t_view"></span>
                 </button>
@@ -183,7 +183,7 @@
                 <span id="t1c54"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument5a">
                     <span class="t_view"></span>
                 </button>
@@ -213,7 +213,7 @@
             </div>
             <div
                 class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument5">
                     <span class="t_view"></span>
                 </button>
@@ -242,7 +242,7 @@
                 <span id="t1c74"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument6">
                     <span class="t_view"></span>
                 </button>
@@ -300,7 +300,7 @@
                 <span id="t1c94"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader"
+                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument8">
                     <span class="t_view"></span>
                 </button>
