edit user update | INSON user edit

--- a/src/pages/local/05_edit_user.html
+++ b/src/pages/local/05_edit_user.html
@@ -110,13 +110,11 @@
                 </div>
             </div>
 
-
-            <div class="grid grid-cols-3 gap-4 mt-12 items-center">
-                <label for="auth_code" class="block mb-2 text-sm font-medium text-gray-900 col-span-1 text-right">
-                    <span class="t_auth_code">Authorization code</span>
-                </label>
+            <div class="mt-5 flex gap-6 items-center justify-start bg-red-100 px-4 py-2">
+                <label for="auth_code" class="block text-sm font-medium text-gray-900"><span
+                        class="t_auth_code">Authorization code</span></label>
                 <input type="text" id="auth_code"
-                    class="disabled:bg-gray-50 border border-amber-600 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 col-span-2"
+                    class="disabled:bg-gray-50 border border-amber-600 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5"
                     required />
             </div>
 
