--- a/src/pages/local/01_dashboard.html
+++ b/src/pages/local/01_dashboard.html
@@ -65,7 +65,8 @@
                 <span id="t1c14"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument1">
                     <span class="t_view"></span>
                 </button>
@@ -95,7 +96,8 @@
             </div>
             <div
                 class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument2">
                     <span class="t_view"></span>
                 </button>
@@ -124,7 +126,8 @@
                 <span id="t1c34"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument3">
                     <span class="t_view"></span>
                 </button>
@@ -154,7 +157,8 @@
             </div>
             <div
                 class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument4">
                     <span class="t_view"></span>
                 </button>
@@ -183,7 +187,8 @@
                 <span id="t1c54"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument5a">
                     <span class="t_view"></span>
                 </button>
@@ -213,7 +218,8 @@
             </div>
             <div
                 class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument5">
                     <span class="t_view"></span>
                 </button>
@@ -242,7 +248,8 @@
                 <span id="t1c74"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument6">
                     <span class="t_view"></span>
                 </button>
@@ -271,7 +278,8 @@
                 <span id="t1c84"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument7">
                     <span class="t_view"></span>
                 </button>
@@ -300,7 +308,8 @@
                 <span id="t1c94"></span>
             </div>
             <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
+                <button
+                    class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader disabled:bg-gray-400"
                     id="view_instrument8">
                     <span class="t_view"></span>
                 </button>
@@ -327,6 +336,15 @@
                 </svg>
                 <span class="t_export_data"></span>
             </button>
+            <button id="inson_user"
+                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-52">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 fill-sky-700" viewBox="0 0 448 512">
+                    <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                </svg>
+                <span class="t_user"></span>
+            </button>
             <button id="users"
                 class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-52">
                 <svg class="h-8 fill-sky-700" xmlns="http://www.w3.org/2000/svg"
@@ -344,7 +362,7 @@
                     <path
                         d="M243.4 2.6l-224 96c-14 6-21.8 21-18.7 35.8S16.8 160 32 160v8c0 13.3 10.7 24 24 24H456c13.3 0 24-10.7 24-24v-8c15.2 0 28.3-10.7 31.3-25.6s-4.8-29.9-18.7-35.8l-224-96c-8-3.4-17.2-3.4-25.2 0zM128 224H64V420.3c-.6 .3-1.2 .7-1.8 1.1l-48 32c-11.7 7.8-17 22.4-12.9 35.9S17.9 512 32 512H480c14.1 0 26.5-9.2 30.6-22.7s-1.1-28.1-12.9-35.9l-48-32c-.6-.4-1.2-.7-1.8-1.1V224H384V416H344V224H280V416H232V224H168V416H128V224zM256 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
                 </svg>
-            
+
                 <span class="t_institution"></span>
             </button>
         </div>
